--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,8 @@ pytest>=6.2.0
 pytest-cov>=2.12.0
 pytest-mock>=3.6.0
 
-# API and CLI
-fastapi>=0.68.0
-uvicorn>=0.15.0
+# CLI
 click>=8.0.0
-pydantic>=1.8.0
 
 # Data handling
 pandas>=1.3.0
